# anki-card-creator

./: README.md  package-lock.json
backend/: .env.example  Cargo.toml  Dockerfile  fly.toml
backend/src/: main.rs
backend/src/handlers/: connection_checks.rs  jwt.rs  mod.rs  sync.rs  users.rs
frontend/: .env.example  package-lock.json  package.json
frontend/src/: ambient.d.ts  app.html  default_fields.json  store.ts  types.ts
frontend/src-tauri/: tauri.conf.json
frontend/src/lib/: AccountComponent.svelte  DevelopersPlayground.svelte  DownloadComponent.svelte  GuideComponent.svelte  IframesComponent.svelte  LoginRegisterComponent.svelte  NoteComponent.svelte  PresetForm.svelte  SettingsComponent.svelte  WiktionaryComponent.svelte  helpers.test.ts  helpers.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: manifest.json
