[package]
name = "axum_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.30"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
mongodb = "2.6.1"
rand = "0.8.5"
regex = "1.9.5"
rust-argon2 = "2.0.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
